protoc generate tool for linux

--- a/python-server/config/DataIndexGen.yaml
+++ b/python-server/config/DataIndexGen.yaml
@@ -1,3 +1,9 @@
+#dataID are 10 digits AABBBBCCDD
+#AA 11 are general Data, 12 are abstract Data
+#BBBB is the Node ID
+#CC is the Descriptor ID
+#DD is the Property ID
+
 DataDescriptor:
   None:
     NoDescriptor: 00
@@ -21,9 +27,6 @@ PluralDataIndex:
       EndTime:
         index: 04
         type: uint64
-      Emoji:
-        index: 05
-        type: "EmojiData"
     descriptor:
       - Current
 
