module gen submit

--- a/modules/conf/test1.yaml
+++ b/modules/conf/test1.yaml
@@ -1,7 +1,8 @@
 ModuleUUID: "placeholder"
 DataDescriptor:
   None:
-    NoDescriptor: 00
+    Single: 00
+    List: 01
   Current:
     Current: 20
 
